build_phase4.log

> Configure project :
Project : => no module-info.java found

> Task :compileJava FAILED
C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\services\DatabaseService.java:86: error: illegal start of expression
    public static java.util.List<com.visiboard.pc.model.Report> getAllReports() {
    ^
1 error

[Incubating] Problems report is available at: file:///C:/Users/Rafsan%20Riasat/AndroidStudioProjects/VisiBoard/visiboard_pc/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\services\DatabaseService.java:86: error: illegal start of expression
      public static java.util.List<com.visiboard.pc.model.Report> getAllReports() {
      ^
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1s
1 actionable task: 1 executed
